# CAD-Files

./: .gitignore  README.md  lora_node
.github/workflows/: teams_notification.yml
drone_dev_kit/: README.md
drone_dev_kit/catkin_ws/src/display_model/: CMakeLists.txt  package.xml  unzip_meshes.py
drone_dev_kit/catkin_ws/src/display_model/description/m500_jetson_rplidar_urdf/urdf/: m500.urdf  voxl-m500.xacro
drone_dev_kit/catkin_ws/src/display_model/description/m500_jetson_zed_rplidar_urdf/urdf/: m500.urdf  voxl-m500.xacro
drone_dev_kit/catkin_ws/src/display_model/description/m500_jetson_zed_urdf/urdf/: m500.urdf  voxl-m500.xacro
drone_dev_kit/catkin_ws/src/display_model/description/m500_urdf/meshes/dae/: camB.dae  camL.dae  camR.dae  camT.dae  gps.dae
drone_dev_kit/catkin_ws/src/display_model/description/m500_urdf/urdf/: m500.urdf
drone_dev_kit/catkin_ws/src/display_model/launch/: display_m500.launch  display_m500_jetson_rplidar.launch  display_m500_jetson_zed.launch  display_m500_jetson_zed_rplidar.launch
drone_dev_kit/catkin_ws/src/display_model/rviz/: m500_config.rviz
drone_dev_kit/voxl-m500_jetson-orin_zed-mini_rplidars1/m500_jetson_zed_rplidar_urdf/urdf/: m500.urdf
lora_node/: README.md
lora_node/Wisblock/Boards/: 3D_RAK1906.stp  README.md
lora_node/Wisblock/Enclosure/: README.md  melc RAKBOX base mounting plate v1.stl  melc RAKBOX custom mounting plate v1.stl  melc RAKBOX top only v2.stl
